--- a/API Server EC2/Vagrantfile
+++ b/API Server EC2/Vagrantfile
@@ -30,9 +30,9 @@ Vagrant.configure("2") do |config|
     aws.access_key_id = File.read("C:\\Users\\ihasMUFFIN\\Documents\\COSC349Labs\\AWS-vagrant\\.aws\\Accesskey.txt")
     aws.secret_access_key = File.read("C:\\Users\\ihasMUFFIN\\Documents\\COSC349Labs\\AWS-vagrant\\.aws\\secrectaccesskey.txt")
     aws.session_token = File.read("C:\\Users\\ihasMUFFIN\\Documents\\COSC349Labs\\AWS-vagrant\\.aws\\sessionkey.txt")
-
+	
     # The region for Amazon Educate is fixed.
-    # aws.region = "us-east-1"
+    aws.region = "us-east-1"
 
     # These options force synchronisation of files to the VM's
     # /vagrant directory using rsync, rather than using trying to use
@@ -61,7 +61,7 @@ Vagrant.configure("2") do |config|
     # they should be comma-separated (if you use more than one) within
     # square brackets.
     #
-    aws.security_groups = ["sg-0556fb20a7bf29b86"]
+    aws.security_groups = ["sg-051b1c86b392f9027"]
 
     # For Vagrant to deploy to EC2 for Amazon Educate accounts, it
     # seems that a specific availability_zone needs to be selected
@@ -69,7 +69,7 @@ Vagrant.configure("2") do |config|
     # availability_zone needs to be included, too (will be of the form
     # "subnet-...").
     aws.availability_zone = "us-east-1a"
-    aws.subnet_id = "subnet-0542f167fc8b4de45"
+    aws.subnet_id = "subnet-08543683ed83d40e9"
 
     # You need to chose the AMI (i.e., hard disk image) to use. This
     # will be of the form "ami-...".
