--- a/API Server EC2/WebApi/WebApi/appsettings.Development.json
+++ b/API Server EC2/WebApi/WebApi/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.2.12;Initial Catalog=MovieDatabase;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=false;User Id=sa;Password=Securepassword123;"
+    "DefaultConnection": "Data Source=my-database.crhg9hyfuk3v.us-east-1.rds.amazonaws.com, 1433;Initial Catalog=MovieDatabase;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=false;User Id=admin;Password=password123;"
   }
 }
